# MonitorConfigurator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MonitorConfigurator.sln  README.md
SelectMonitorConfiguration/: SelectMonitorConfiguration.cpp  SelectMonitorConfiguration.vcxproj  SelectMonitorConfiguration.vcxproj.filters
src/: CMakeLists.txt  main.cpp
